force-app/main/default/objects/MeasureConfig__c/MeasureConfig__c.object-meta.xml
<CustomObject>
    <label>Measure Config</label>
    <nameField>
        <label>Measure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Measure Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>