force-app/main/default/objects/MeasureConfig__c/fields/frequency__c.field-meta.xml
<CustomField>
    <fullName>frequency__c</fullName>
    <description>Specify the frequency of a period (e.g., D as Daily, H as Hourly)</description>
    <inlineHelpText>Specify the frequency of a period (e.g., D as Daily, H as Hourly)</inlineHelpText>
    <label>frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>frequency</valueSetName>
    </valueSet>
</CustomField>