force-app/main/default/objects/MeasureConfig__c/fields/last_train_time__c.field-meta.xml
<CustomField>
    <fullName>last_train_time__c</fullName>
    <description>Merlion last mobile training time</description>
    <inlineHelpText>Merlion last mobile training time</inlineHelpText>
    <label>last train time</label>
    <type>DateTime</type>
</CustomField>