force-app/main/default/objects/MeasureConfig__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <description>Name of the Merlion model-specific forecasting used during the training</description>
    <inlineHelpText>Name of the Merlion model-specific forecasting used during the training</inlineHelpText>
    <label>Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>