force-app/main/default/objects/MeasureConfig__c/fields/Model_Path__c.field-meta.xml
<CustomField>
    <fullName>Model_Path__c</fullName>
    <description>folder path where the Merlion model is saved</description>
    <inlineHelpText>folder path where the Merlion model is saved</inlineHelpText>
    <label>Model Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>