force-app/main/default/objects/MeasureConfig__c/fields/query__c.field-meta.xml
<CustomField>
    <fullName>query__c</fullName>
    <label>query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>