force-app/main/default/objects/MeasureConfig__c/fields/RMSE__c.field-meta.xml
<CustomField>
    <fullName>RMSE__c</fullName>
    <description>Root Mean Square Error (RMSE) is a standard way to measure the error of a model in predicting quantitative data</description>
    <inlineHelpText>Root Mean Square Error (RMSE) is a standard way to measure the error of a model in predicting quantitative data</inlineHelpText>
    <label>RMSE</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>