force-app/main/default/objects/MeasureConfig__c/fields/sMAPE__c.field-meta.xml
<CustomField>
    <fullName>sMAPE__c</fullName>
    <description>sMAPE measures the error of the prediction on a scale of 0 to 100 (lower is better)</description>
    <inlineHelpText>sMAPE measures the error of the prediction on a scale of 0 to 100 (lower is better)</inlineHelpText>
    <label>sMAPE</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>