force-app/main/default/objects/MeasureConfig__c/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <label>source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>source</valueSetName>
    </valueSet>
</CustomField>