force-app/main/default/objects/MeasureConfig__c/validationRules/Query_required_for_source_soql_count.validationRule-meta.xml
<ValidationRule>
    <fullName>Query_required_for_source_soql_count</fullName>
    <active>true</active>
    <description>The Query is required for source equal to soql_count</description>
    <errorConditionFormula>AND(
    ISPICKVAL( source__c , &apos;soql_count&apos;),
    ISBLANK( query__c )
)</errorConditionFormula>
    <errorDisplayField>query__c</errorDisplayField>
    <errorMessage>The Query is required for source equal to soql_count</errorMessage>
</ValidationRule>