force-app/main/default/objects/MeasureConfig__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>active__c</columns>
    <columns>max_value__c</columns>
    <columns>frequency__c</columns>
    <columns>source__c</columns>
    <columns>query__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>